fixed the z-index issue and also fixed c-section-asset top:0; for left and right

--- a/assets/scss/blocks/_b-base.scss
+++ b/assets/scss/blocks/_b-base.scss
@@ -6,6 +6,8 @@
     /* different container sizes */
     &__container {
         @include container;
+        @include z-index(content);
+        position: relative;
 
         &--full {
             @include container(full);
